--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body style="background-color: #938f8f">
     <hr>
     <h1>This is new gallery</h1>
     <hr>
