--- a/index.html
+++ b/index.html
@@ -66,6 +66,7 @@
     </section>
 -->
 </body>
-<script src="script.js"></script>
+<script type="module" src="/scripts/script.js"></script>
+<script type="module" src="/scripts/colect.js"></script>
 
 </html>
