--- a/index.html
+++ b/index.html
@@ -66,6 +66,6 @@
     </section>
 -->
 </body>
-<script type="module" src="/scripts/script.js"></script>
+<script type="module" src="scripts/script.js"></script>
 
 </html>
