item navigation beginn

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <link href="styles/css/styles.css" rel="stylesheet">
-    <title>Document</title>
+    <link rel="stylesheet" href="styles/fonts/iconmoons/style.css">
+</head>
+<title>Document</title>
 </head>
 
 <body style="background-color: #938f8f">
@@ -23,8 +25,21 @@
                 </div>
             </div> -->
 
+            <!--  -->
+
+            <div class="item-Wrapp item-id-0 img-position-0 img-box animation-scale transl-to-right"
+                style="margin:5px; flex-basis: calc( 16.6667% - 10px ); height: calc(16.6667vw - 10px);"><img
+                    src="img/img_01-min.jpg" alt="img_o1" class="gallery-item img-item">
+
+                <div class="itemNav">
+                    <!-- navigation -->
+                </div>
+            </div>
+            <!--  -->
+
+
             <div class="img-wrapp" data-name="gallery-box" id="gallery-box">
-                <img src="img/img_01-min.jpg" alt="img_o1" class="gallery-item img-item">
+                <div><img src="img/img_01-min.jpg" alt="img_o1" class="gallery-item img-item"></div>
                 <img src="img/img_02-min.jpg" alt="img_o2" class="gallery-item img-item">
                 <img src="img/img_03-min.jpg" alt="img_o3" class="gallery-item img-item">
                 <img src="img/img_04-min.jpg" alt="img_o4" class="gallery-item img-item">
@@ -44,6 +59,9 @@
                 <img src="img/img_017-min.jpg" alt="img_o7" class="gallery-item img-item">
                 <img src="img/img_018-min.jpg" alt="img_o7" class="gallery-item img-item">
                 <img src="img/img_019-min.jpg" alt="img_o7" class="gallery-item img-item">
+                <div>
+                    <h3>text is text</h3>
+                </div>
 
 
             </div>
