--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta charset="UTF-8">
     <link href="styles/css/styles.css" rel="stylesheet">
     <link rel="stylesheet" href="styles/fonts/iconmoons/style.css">
-</head>
-<title>Document</title>
+    <title>Push gallery</title>
 </head>
 
 <body style="background-color: #938f8f">
@@ -23,29 +22,12 @@
                     <button class="nav-right">right</button>
                     <button class="nav-fulscreen">fullsreen</button>
                 </div>
-            </div> -->
-
-            <!--  -->
-
-
-
-            <!--  -->
+            </div> -->          
 
 
             <div class="img-wrapp" data-name="gallery-box" id="gallery-box" style="width: 90%; margin: auto">
                 <div>
-                    <img src="img/img_01-min.jpg" alt="img_o1" class="gallery-item img-item">
-                    <div class="itemNav-wrap">
-                        <!-- navigation -->
-                        <div class="itemNaw">
-                            <!-- <button class="left">&#8592;</button>
-                                <button class="left">&#8594;</button>
-                                <button class="left">&#215;</button> -->
-                            <button class="icon-enlarge">
-
-                            </button>
-                        </div>
-                    </div>
+                    <img src="img/img_01-min.jpg" alt="img_o1" class="gallery-item img-item">                    
                 </div>
                 <img src="img/img_02-min.jpg" alt="img_o2" class="gallery-item img-item">
                 <img src="img/img_03-min.jpg" alt="img_o3" class="gallery-item img-item">
@@ -58,7 +40,6 @@
                 <img src="img/img_010-min.jpg" alt="img_o7" class="gallery-item img-item">
                 <img src="img/img_011-min.jpg" alt="img_o7" class="gallery-item img-item">
                 <img src="img/img_012-min.jpg" alt="img_o7" class="gallery-item img-item">
-
                 <img src="img/img_014-min.jpg" alt="img_o7" class="gallery-item img-item">
                 <img src="img/img_013-min.jpg" alt="img_o7" class="gallery-item img-item">
                 <img src="img/img_015-min.jpg" alt="img_o7" class="gallery-item img-item">
