--- a/index.html
+++ b/index.html
@@ -29,27 +29,27 @@
         <div class="gallery-wrapp">               
             <div class="img-wrapp" data-name="gallery-box" id="gallery-box" style="width: 90%; margin: auto">
                 <div>
-                    <img src="img/img_01-min.jpg" alt="img_o1" class="gallery-item img-item">                    
+                    <img src="img/img_01-min.jpg" alt="img_o1" class="img-item">                    
                 </div>
-                <img src="img/img_02-min.jpg" alt="img_o2" class="gallery-item img-item">
-                <img src="img/img_03-min.jpg" alt="img_o3" class="gallery-item img-item">
-                <img src="img/img_04-min.jpg" alt="img_o4" class="gallery-item img-item">
-                <img src="img/img_05-min.jpg" alt="img_o5" class="gallery-item img-item">
-                <img src="img/img_06-min.jpg" alt="img_o6" class="gallery-item img-item">
-                <img src="img/img_07-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_08-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_09-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_010-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_011-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_012-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_014-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_013-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_015-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_016-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_017-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_018-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/img_019-min.jpg" alt="img_o7" class="gallery-item img-item">
-                <img src="img/wall_3.jpg" alt="img_o7" class="gallery-item img-item">
+                <img src="img/img_02-min.jpg" alt="img_o2" class="img-item">
+                <img src="img/img_03-min.jpg" alt="img_o3" class="img-item">
+                <img src="img/img_04-min.jpg" alt="img_o4" class="img-item">
+                <img src="img/img_05-min.jpg" alt="img_o5" class="img-item">
+                <img src="img/img_06-min.jpg" alt="img_o6" class="img-item">
+                <img src="img/img_07-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_08-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_09-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_010-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_011-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_012-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_014-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_013-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_015-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_016-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_017-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_018-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/img_019-min.jpg" alt="img_o7" class="img-item">
+                <img src="img/wall_3.jpg" alt="img_o7" class="img-item">
                 <!-- <div>
                     <h3>text is text</h3>
                 </div> -->
@@ -59,5 +59,5 @@
         </div>
     </section>
 </body>
-<script type="module" src="scripts/script.js"></script>
+<script type="module" src="scripts/app.js"></script>
 </html>
